test oozie WF with a test script

--- a/oozie/job.properties
+++ b/oozie/job.properties
@@ -6,7 +6,7 @@ mode=cluster
 queue_name=default
 coodinatorName=test_coodinator
 #jar_path=
-
+app_path=project/automation_project/
 #Oozie params
 oozie.libpath=/opt/cloudera/parcels/CDH-6.3.2-1.cdh6.3.2.p0.1605554/jars/..
 oozie.use.system.libpath=true
