--- a/oozie/job.properties
+++ b/oozie/job.properties
@@ -1,20 +1,21 @@
-nameNode=d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:9870
+nameNode=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:9870
 jobTracker=yarn-cluster
 master=yarn
 #launcher_queue=
 mode=cluster
 queue_name=default
-coodinatorName=test_coodinator
+
 #jar_path=
-app_path=project/automation_project/
+app_path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/datagang/project/automation_project/
 #Oozie params
-oozie.libpath=/opt/cloudera/parcels/CDH-6.3.2-1.cdh6.3.2.p0.1605554/jars/..
+oozie.libpath=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/oozie/share/lib
 oozie.use.system.libpath=true
 oozie.wf.rerun.failnodes=true
 oozie.action.sharelib.for.spark=spark2
 
 #coodinator
-start_date=2020/11/23
-end_date=3016/11/01
+coodinatorName=test_coodinator
+start_date=2020-11-23T05:00+0100
+end_date=3016-12-30T00:00+0100
 frequency=1440
 timezone=Europe/Paris
