--- a/oozie/job.properties
+++ b/oozie/job.properties
@@ -8,7 +8,7 @@ queue_name=default
 #jar_path=
 app_path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.pub.instances.scw.cloud:8020/user/datagang/project/automation_project/
 #Oozie params
-oozie.libpath=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.pub.instances.scw.cloud:8020/user/oozie/share/lib
+oozie.libpath=hdfs://$(hostname -f):8020/user/oozie/share/lib
 oozie.use.system.libpath=true
 oozie.wf.rerun.failnodes=true
 oozie.action.sharelib.for.spark=spark2
