--- a/oozie/job.properties
+++ b/oozie/job.properties
@@ -6,7 +6,7 @@ mode=cluster
 queue_name=default
 
 #jar_path=
-app_path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.pub.instances.scw.cloud:8020/user/datagang/project/automation_project/
+app_path=project/automation_project/
 #Oozie params
 oozie.libpath=hdfs://$(hostname -f):8020/user/oozie/share/lib
 oozie.use.system.libpath=true
