test oozie WF with a test script

--- a/job.properties
+++ b/job.properties
@@ -6,7 +6,7 @@ mode=cluster
 queue_name=default
 
 #jar_path=
-app_path=project/automation_project/
+app_path=hdfs://$(hostname -f)/project/automation_project/
 #Oozie params
 oozie.libpath=hdfs://$(hostname -f):8020/user/oozie/share/lib
 oozie.use.system.libpath=true
