test oozie WF with a test script

--- a/job.properties
+++ b/job.properties
@@ -6,8 +6,9 @@ mode=cluster
 queue_name=default
 
 #jar_path=
-app_path=hdfs://$(hostname -f)/project/automation_project/
+
 #Oozie params
+oozie.wf.application.path=hdfs://$(hostname -f)/project/automation_project/
 oozie.libpath=hdfs://$(hostname -f):8020/user/oozie/share/lib
 oozie.use.system.libpath=true
 oozie.wf.rerun.failnodes=true
