--- a/job.properties
+++ b/job.properties
@@ -9,7 +9,7 @@ queue_name=default
 
 #Oozie params
 oozie.wf.application.path=hdfs://$(hostname -f)/project/automation_project/
-oozie.libpath=hdfs://$(hostname -f):8020/user/oozie/share/lib
+oozie.libpath=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/oozie/share/lib
 oozie.use.system.libpath=true
 oozie.wf.rerun.failnodes=true
 oozie.action.sharelib.for.spark=spark2
