test oozie WF with a test script

--- a/job.properties
+++ b/job.properties
@@ -1,4 +1,4 @@
-nameNode=79663291-27f5-4fb7-ac28-634c79cec301.priv.instances.scw.cloud:8020
+nameNode=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020
 jobTracker=yarn-cluster
 master=yarn
 #launcher_queue=
@@ -8,8 +8,8 @@ queue_name=default
 #jar_path=
 
 #Oozie params
-oozie.wf.application.path=hdfs://79663291-27f5-4fb7-ac28-634c79cec301.priv.instances.scw.cloud:8020/project/automation_project
-oozie.libpath=hdfs://79663291-27f5-4fb7-ac28-634c79cec301.priv.instances.scw.cloud:8020/user/oozie/share/lib
+oozie.wf.application.path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/project/automation_project
+oozie.libpath=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/oozie/share/lib
 oozie.use.system.libpath=true
 oozie.wf.rerun.failnodes=true
 oozie.action.sharelib.for.spark=spark2
