test oozie WF with a test script

--- a/job.properties
+++ b/job.properties
@@ -8,7 +8,7 @@ queue_name=default
 #jar_path=
 
 #Oozie params
-oozie.wf.application.path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/project/automation_project
+oozie.wf.application.path=project/automation_project
 oozie.libpath=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/oozie/share/lib
 oozie.use.system.libpath=true
 oozie.wf.rerun.failnodes=true
