--- a/job.properties
+++ b/job.properties
@@ -1,5 +1,5 @@
 nameNode=hdfs://79663291-27f5-4fb7-ac28-634c79cec301.priv.instances.scw.cloud:9871
-jobTracker=yarn-cluster
+jobTracker=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
 master=yarn
 #launcher_queue=
 mode=cluster
@@ -17,7 +17,7 @@ oozie.action.sharelib.for.spark=spark2
 
 #coodinator
 coodinatorName=test_coodinator
-start_date=2020-11-25T00:00+0100
+start_date=2020-11-25T05:00+0100
 end_date=3016-12-30T00:00+0100
 frequency=1440
 timezone=Europe/Paris
