--- a/job.properties
+++ b/job.properties
@@ -1,9 +1,10 @@
 nameNode=hdfs://79663291-27f5-4fb7-ac28-634c79cec301.priv.instances.scw.cloud:9871
-jobTracker=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
+jobTracker=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8021
 master=yarn
 #launcher_queue=
 mode=cluster
 queue_name=default
+resourceManager=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
 
 #jar_path=
 
