--- a/job.properties
+++ b/job.properties
@@ -14,11 +14,11 @@ oozie.wf.application.path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.insta
 oozie.libpath=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/oozie/share/lib
 oozie.use.system.libpath=true
 oozie.wf.rerun.failnodes=true
-oozie.action.sharelib.for.spark=spark2
+#oozie.action.sharelib.for.spark=spark2
 
 #coodinator
 coodinatorName=test_coodinator
-start_date=2020-11-25T05:00+0100
+start_date=2020-11-29T05:00+0100
 end_date=3016-12-30T00:00+0100
 frequency=1440
 timezone=Europe/Paris
