--- a/job.properties
+++ b/job.properties
@@ -3,7 +3,7 @@ jobTracker=d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
 master=yarn
 #launcher_queue=
 mode=cluster
-queue_name=default
+queue_name=datagang
 resourceManager=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
 
 #jar_path=
