--- a/job.properties
+++ b/job.properties
@@ -1,12 +1,15 @@
-nameNode=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:9870
+nameNode=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020
 jobTracker=d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
 master=yarn
 #launcher_queue=
 mode=cluster
-queue_name=sqoop
-resourceManager=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
+queue_name=defaut
+resourceManager=d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
 
-#jar_path=
+jar_path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/datagang/lib
+avrotools_filename=avro-tools-1.9.2.jar
+schema_path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/datagang/schema
+data_path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/datagang/data
 
 #Oozie params
 app_path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/datagang/project/infra_automation
