--- a/job.properties
+++ b/job.properties
@@ -3,7 +3,7 @@ jobTracker=d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
 master=yarn
 #launcher_queue=
 mode=cluster
-queue_name=sqoop
+queue_name=default
 resourceManager=d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
 
 jar_path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/datagang/lib
