--- a/job.properties
+++ b/job.properties
@@ -2,7 +2,7 @@ nameNode=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:80
 jobTracker=d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
 master=yarn
 #launcher_queue=
-mode=cluster
+mode=client
 queue_name=default
 resourceManager=d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8032
 
