test oozie WF with a test script

--- a/job.properties
+++ b/job.properties
@@ -17,7 +17,7 @@ oozie.wf.application.path=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.insta
 #oozie.libpath=hdfs://d271ee89-3c06-4d40-b9d6-d3c1d65feb57.priv.instances.scw.cloud:8020/user/oozie/share/lib
 oozie.use.system.libpath=true
 oozie.wf.rerun.failnodes=true
-oozie.action.sharelib.for.spark=spark2
+#oozie.action.sharelib.for.spark=spark2
 
 #coodinator
 coodinatorName=test_coodinator
